Bug 157011 - DOCX table for inserted or deleted columns TC shown problem.
Summary: DOCX table for inserted or deleted columns TC shown problem.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-08-30 11:50 UTC by NISZ LibreOffice Team
Modified: 2023-09-07 08:41 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (9.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-08-30 11:50 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-08-30 11:50:10 UTC
Description:
In the following DOCX table, only non-blank cells are shown as changes in the inserted or deleted columns, blank cells are not.

Steps to Reproduce:
1. Open attached document in LO.
2. Edit-> TC Manage changes.

Actual Results:
Only non-blank cells are shown as changes, blank cells are not.

Expected Results:
Blank cells also show up as changes.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 33ae7c12bbdf19b76ced472ca8aed6cf66477bbe
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-08-30 11:50:41 UTC
Created attachment 189247 [details]
Sample file
Comment 2 Commit Notification 2023-09-06 18:34:10 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4697d2bda1b37f9cf8b301f5bf044c2390f56333

tdf#157011 sw tracked table column: fix DOCX import of empty cell

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 László Németh 2023-09-06 18:35:28 UTC
Commit description (mentioning possible regression):

tdf#157011 sw tracked table column: fix DOCX import of empty cell

OOXML w:std elements are imported with 0x01 characters in text
content of tracked table columns (as a regression in LO 7.3?),
losing change tracking data. Fix this temporarily by completing
SwTableBox::IsEmpty() handling the bad 0x01 characters of the
imported tracked empty cells.

See also commit a483a44ca00f43a64ae51d62b8fbb4129a413f6d
"tdf#143215 DOCX import: fix tracked empty row insertion/deletion".
Comment 4 Commit Notification 2023-09-07 08:41:18 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e6fc440bdb02c6a815153275ef1c7ded6f8d4a7a

tdf#157011 sw tracked table column: fix DOCX import of empty cell

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.