tdf#157011 sw tracked table column: fix DOCX import of empty cell

OOXML w:std elements are imported with 0x01 characters in text
content of tracked table columns (as a regression in LO 7.3?),
losing change tracking data. Fix this temporarily by completing
SwTableBox::IsEmpty() handling the bad 0x01 characters of the
imported tracked empty cells.

See also commit a483a44ca00f43a64ae51d62b8fbb4129a413f6d
"tdf#143215 DOCX import: fix tracked empty row insertion/deletion".

Change-Id: I4895754e540cca6ba2cb3442f24a8affcedd51fb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156626
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>